Fix safari on iOS click behavior

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -37,4 +37,5 @@
   padding: 0;
   max-width: @main-max-width;
   min-width: @main-min-width;
+  overflow: hidden;
 }
